Catch up till day 11

--- a/2024/ocaml/lib/dune
+++ b/2024/ocaml/lib/dune
@@ -1,5 +1,7 @@
 (library
  (public_name aoc)
  (name helpers)
- (libraries re stdio)
+ (preprocess
+  (pps ppx_compare ppx_sexp_conv))
+ (libraries re stdio base ppx_sexp_conv ppx_compare)
  (modules helpers))
