--- a/2024/aoc.opam
+++ b/2024/aoc.opam
@@ -6,9 +6,9 @@ maintainer: ["Maintainer Name"]
 authors: ["Author Name"]
 license: "LICENSE"
 tags: ["topics" "to describe" "your" "project"]
-homepage: "https://github.com/username/reponame"
+homepage: "https://github.com/francojreyes/aoc"
 doc: "https://url/to/documentation"
-bug-reports: "https://github.com/username/reponame/issues"
+bug-reports: "https://github.com/francojreyes/aoc/issues"
 depends: [
   "ocaml"
   "dune" {>= "3.15"}
@@ -29,4 +29,4 @@ build: [
     "@doc" {with-doc}
   ]
 ]
-dev-repo: "git+https://github.com/username/reponame.git"
+dev-repo: "git+https://github.com/francojreyes/aoc.git"
